# telegram_chatgpt_bot

./: README.md  pyproject.toml  tz.docx
telegram_chatgpt_bot/: telegram_bot.py  telegram_chatgpt_bot.py
tests/: test_telegram_chatgpt_bot.py
