[tool.poetry]
name = "telegram_chatgpt_bot"
version = "0.1.0"
description = ""
authors = ["nikon <nikon2127@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
